--- a/interview_analysis/environment.yml
+++ b/interview_analysis/environment.yml
@@ -51,6 +51,7 @@ dependencies:
   - pillow=9.2.0=py310hdc2b20a_1
   - pip=22.2.2=py310haa95532_0
   - ply=3.11=py310haa95532_0
+  - pycodestyle=2.8.0=pyhd3eb1b0_0
   - pyparsing=3.0.9=py310haa95532_0
   - pyqt=5.15.7=py310hd77b12b_0
   - pyqt5-sip=12.11.0=py310hd77b12b_0
