--- a/interview_analysis/environment.yml
+++ b/interview_analysis/environment.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - blas=1.0=mkl
+  - bottleneck=1.3.5=py310h9128911_0
   - brotli=1.0.9=h2bbff1b_7
   - brotli-bin=1.0.9=h2bbff1b_7
   - bzip2=1.0.8=he774522_0
@@ -43,10 +44,12 @@ dependencies:
   - mkl_fft=1.3.1=py310ha0764ea_0
   - mkl_random=1.2.2=py310h4ed8f06_0
   - munkres=1.0.7=py_1
+  - numexpr=2.8.3=py310hb57aa6b_0
   - numpy=1.23.3=py310h60c9a35_0
   - numpy-base=1.23.3=py310h04254f7_0
   - openssl=1.1.1q=h2bbff1b_0
   - packaging=21.3=pyhd3eb1b0_0
+  - pandas=1.4.4=py310hd77b12b_0
   - pcre=8.45=hd77b12b_0
   - pillow=9.2.0=py310hdc2b20a_1
   - pip=22.2.2=py310haa95532_0
@@ -57,6 +60,7 @@ dependencies:
   - pyqt5-sip=12.11.0=py310hd77b12b_0
   - python=3.10.6=hbb2ffb3_1
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - pytz=2022.1=py310haa95532_0
   - qt-main=5.15.2=he8e5bd7_7
   - qt-webengine=5.15.9=hb9a9bb5_4
   - qtwebkit=5.212=h3ad3cdb_4
