Try again to get workflow to go on push to sim_data

--- a/simulate_data/.github/workflows/sim_data_workflows.yml
+++ b/simulate_data/.github/workflows/sim_data_workflows.yml
@@ -2,9 +2,9 @@ name: Continuous Test Integration for Simulated data
 
 on:
   push:
-    branches: [ "sim_data" ]
+    branches: [sim_data]
   pull_request:
-    branches: [ "sim_data" ]
+    branches: [sim_data]
 
 jobs:
   run_style_check:
