--- a/.github/workflows/sim_data_workflows.yml
+++ b/.github/workflows/sim_data_workflows.yml
@@ -14,12 +14,12 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: swe4s
-          environment-file: env.yml
+          environment-file: simulate_data/env.yml
       - run: |
           python -m pip install --upgrade pip
           python -m pip install pycodestyle
-          pycodestyle $(git ls-files "*.py")
-          pycodestyle $(git ls-files "tests/*.py")
+          pycodestyle $(git ls-files "simulate_data/*.py")
+          pycodestyle $(git ls-files "simulate_data/tests/*.py")
   run_code_tests:
     runs-on: ubuntu-latest
     steps:
@@ -32,4 +32,4 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install numpy
           conda install numpy
-          ./run_tests.sh
+          ./simulate_data/run_tests.sh
