--- a/.github/workflows/sim_data_workflows.yml
+++ b/.github/workflows/sim_data_workflows.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: swe4s
-          environment-file: env.yml
+          environment-file: simulate_data/env.yml
       - run: |
           python -m pip install --upgrade pip
           python -m pip install numpy
