Do workflow on more branches

--- a/.github/workflows/sim_data_workflows.yml
+++ b/.github/workflows/sim_data_workflows.yml
@@ -2,9 +2,13 @@ name: Continuous Test Integration for Simulated data
 
 on:
   push:
-    branches: [sim_data]
+    branches:
+      - main
+      - sim_data
   pull_request:
-    branches: [sim_data]
+    branches:
+      - main
+      - sim_data
 
 jobs:
   run_style_check:
