updaitng workflow file

--- a/.github/workflows/survey_tests.yml
+++ b/.github/workflows/survey_tests.yml
@@ -17,8 +17,8 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: cgrs
-          environment-file: environment.yml
-      - run: bash tests/test_probability.sh
+          environment-file:survey_analysis/environment.yml
+      - run: bash survey_analysis/tests/test_probability.sh
   code_style:
     runs-on: ubuntu-latest
     defaults:
@@ -29,7 +29,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: cgrs
-          environment-file: environment.yml
+          environment-file: survey_analysis/environment.yml
       - run: pycodestyle $(git ls-files "*.py")
 
   unit_tests:
@@ -42,5 +42,5 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: cgrs
-          environment-file: environment.yml
-      - run: python -m unittest tests/test_utils.py
+          environment-file: survey_analysis/environment.yml
+      - run: python -m unittest survey_analysis/tests/test_utils.py
