--- a/interview_analysis/environment.yml
+++ b/interview_analysis/environment.yml
@@ -1,8 +1,11 @@
 name: calc-study
 channels:
+  - menpo
   - bioconda
   - defaults
+  - conda-forge
 dependencies:
+  - anyascii=0.3.1=pyhd8ed1ab_0
   - blas=1.0=mkl
   - bottleneck=1.3.5=py310h9128911_0
   - brotli=1.0.9=h2bbff1b_7
@@ -10,6 +13,8 @@ dependencies:
   - bzip2=1.0.8=he774522_0
   - ca-certificates=2022.10.11=haa95532_0
   - certifi=2022.9.24=py310haa95532_0
+  - click=8.0.4=py310haa95532_0
+  - colorama=0.4.5=py310haa95532_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=ha860e81_0
@@ -18,6 +23,7 @@ dependencies:
   - gstreamer=1.18.5=hd78058f_0
   - icu=58.2=ha925a31_3
   - intel-openmp=2021.4.0=haa95532_3556
+  - joblib=1.1.1=py310haa95532_0
   - jpeg=9e=h2bbff1b_0
   - kiwisolver=1.4.2=py310hd77b12b_0
   - lerc=3.0=hd77b12b_0
@@ -44,10 +50,11 @@ dependencies:
   - mkl_fft=1.3.1=py310ha0764ea_0
   - mkl_random=1.2.2=py310h4ed8f06_0
   - munkres=1.0.7=py_1
+  - nltk=3.7=pyhd3eb1b0_0
   - numexpr=2.8.3=py310hb57aa6b_0
   - numpy=1.23.3=py310h60c9a35_0
   - numpy-base=1.23.3=py310h04254f7_0
-  - openssl=1.1.1q=h2bbff1b_0
+  - openssl=1.1.1s=h2bbff1b_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.4=py310hd77b12b_0
   - pcre=8.45=hd77b12b_0
@@ -64,6 +71,7 @@ dependencies:
   - qt-main=5.15.2=he8e5bd7_7
   - qt-webengine=5.15.9=hb9a9bb5_4
   - qtwebkit=5.212=h3ad3cdb_4
+  - regex=2022.7.9=py310h2bbff1b_0
   - setuptools=65.4.0=py310haa95532_0
   - sip=6.6.2=py310hd77b12b_0
   - six=1.16.0=pyhd3eb1b0_1
@@ -71,6 +79,7 @@ dependencies:
   - tk=8.6.12=h2bbff1b_0
   - toml=0.10.2=pyhd3eb1b0_0
   - tornado=6.2=py310h2bbff1b_0
+  - tqdm=4.64.1=py310haa95532_0
   - tzdata=2022e=h04d1e81_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
